--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@ target="_blank">
   <div class="footer-grid">
     <div>
       <h4>Know more</h4>
-      <p><a href="about.html">About Us</a></p>
-      <p><a href="privacy.html">Privacy Policy</a></p>
-      <p><a href="shipping.html">Shipping Policy</a></p>
-      <p><a href="return.html">Return & Cancellation</a></p>
-      <p><a href="terms.html">Terms of Service</a></p>
+      <p><a href="/about/">About Us</a></p>
+      <p><a href="/privacy/">Privacy Policy</a></p>
+      <p><a href="/shipping/">Shipping Policy</a></p>
+      <p><a href="/return/">Return & Cancellation</a></p>
+      <p><a href="/terms/">Terms of Service</a></p>
     </div>
 
   <div class="footer-copy">
@@ -349,18 +349,17 @@ Thank you for visiting.
 </div>
   
   <a href="/special-sale/" class="menu-sale">Special Sale 🔥</a>
-  <a href="about.html">About Us</a>
-  <a href="privacy.html">Privacy Policy</a>
-  <a href="shipping.html">Shipping Policy</a>
-  <a href="return.html">Return & Cancellation</a>
-  <a href="terms.html">Terms of Service</a>
+  <a href="/about/">About Us</a>
+  <a href="/privacy/">Privacy Policy</a>
+  <a href="/shipping/">Shipping Policy</a>
+  <a href="/return/">Return & Cancellation</a>
+  <a href="/terms/">Terms of Service</a>
 </nav>
 
   
   <script src="/assets/ js/config.js"></script>
 <script src="/assets/ js/core.js" defer></script>
 <script src="/assets/ js/products.js" defer></script>
-<script src="/assets/ js/mainale.js" defer></script>
 
   <script>
   const saleDate = new Date(SALE_CONFIG.start);
