--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -303,9 +303,9 @@ Thank you for visiting.
   <a href="/terms/">Terms of Service</a>
 </nav>
   
-<script src="assets/ js/config.js"></script>
-<script src="assets/ js/core.js" defer></script>
-<script src="assets/ js/products.js" defer></script>
+<script src="/assets/ js/config.js"></script>
+<script src="/assets/ js/core.js" defer></script>
+<script src="/assets/ js/products.js" defer></script>
 <script>
   const saleEnabled = SALE_CONFIG.enabled;
   const saleStart = new Date(SALE_CONFIG.start);
