--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     <a href="#products" class="cta">Explore </a>
   </div>
   <div class="middle">
-  <a class="sale-cta" href="special-sale.html">
+  <a class="sale-cta" href="/special-sale/">
   <div class="sale-cta-inner">
     <span class="sale-title">Special Sale</span>
     <span class="sale-timer" id="saleTimeText">Loading...</span>
