--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ Thank you for visiting.
   
 <script src="/assets/ js/core.js"></script>
 <script src="/assets/ js/products.js"></script>
-<script src="/assets/ js/config.js" defer></script>
+<script src="/assets/ js/config.js"></script>
   <script>
   const saleDate = new Date(SALE_CONFIG.start);
   const now = new Date();
