--- a/index.html
+++ b/index.html
@@ -60,6 +60,64 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   <div class="coming-soon">
   New product.<span>Coming up</span>
   </div>
+  <div class="page">
+  <h1>Special sale</h1>
+  <p>While you’re thinking, someone else might be booking it right now.<strong>book now</strong></p>
+  <button class="details-btn booking-btn" data-label="Booking Guide" onclick="toggleDetails(this)">
+  Booking Guide ▾
+</button>
+  <div class="product-details">
+  <p>
+    •Products are live during the <strong>sale time</strong>.
+   If all products are <strong>sold out</strong>, please wait for the <strong>next sale</strong>.
+    </p>
+  <p>
+    •Products may be available as <strong>single pieces or combo sets</strong>, depending on stock.
+  </p>
+  <p>
+    • To place an order, click the <strong>“Book Now”</strong> button to contact us on WhatsApp.
+  </p>
+  <p>
+    •Before you book, please make sure the product is not marked as <strong>Sold</strong>.Sold items cannot be booked.
+  </p>
+
+  <p>
+    • Please wait for our confirmation first.
+    If the product is available, we’ll reply <strong>“YES”</strong>.
+  </p>
+
+  <p>
+    • To book, you can pay the <strong>booking amount or full amount</strong>.
+The booking amount is only to <strong>hold the product,</strong> so you can add more items and <strong>reduce delivery charges</strong>.
+  </p>
+  <p>
+    • <strong>Please book your products early to avoid missing out</strong>.
+  </p>
+  <p>
+    • If the product is already sold, we’ll reply <strong>“SOLD”</strong>.
+  </p>
+
+  <p>
+    <strong>Important:</strong> Please do <strong>not</strong> make any payment before confirmation.
+  </p>
+
+  <p>
+    🚫 <strong>COD is not available</strong>
+  </p>
+
+  <p>
+    🚚 <strong>Pan-India delivery</strong> with proper bubble-wrap packaging.
+  </p>
+
+  <p>
+    📦 Delivery charges:
+    ₹90 up to 500g · ₹120 per kg average, depends on location 
+    <br><small>(Charges may vary slightly)</small>
+  </p>
+
+</div>
+
+  </div>
   <section id="products" class="products">
 <input
   type="text"
