--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -302,8 +302,8 @@ Thank you for visiting.
 </nav>
   
 <script src="/assets/ js/config.js"></script>
-<script src="/assets/ js/core.js" defer></script>
-<script src="/assets/ js/products.js" defer></script>
+<script src="/assets/ js/core.js"></script>
+<script src="/assets/ js/products.js"></script>
 <script>
   const saleEnabled = SALE_CONFIG.enabled;
   const saleStart = new Date(SALE_CONFIG.start);
@@ -341,4 +341,4 @@ Thank you for visiting.
 </script>
 </body>
   </html>
-j
+
