--- a/index.html
+++ b/index.html
@@ -13,19 +13,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>DIECAST.SCAPE</title>
-
-<link rel="icon" type="image/x-icon" href="/favicon.ico">
-  
+<link rel="icon" type="image/x-icon" href="/favicon.ico"> 
 <link rel="stylesheet" href="/assets/css/style.css">
-  
 </head>
-
-<div id="lightbox" onclick="closeLightbox()">
-  <img id="lightbox-img">
-</div>
-<div class="menu-overlay" onclick="closeMenu()"></div>
-
-  
 <body>
   
 <header class="site-header">
@@ -33,7 +23,6 @@
     <img src="logo.png" class="header-logo" alt="Diecast Scape Logo">
 
     <div class="header-title">DIECAST.SCAPE</div>
-
 
     <div class="hamburger" onclick="openMenu()">☰</div>
   </div>
@@ -55,7 +44,6 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   </a>
   </div>
 </section>
-  
 
   <div class="coming-soon">
   New product.<span>Coming up</span>
@@ -80,12 +68,10 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
   <p>
     •Before you book, please make sure the product is not marked as <strong>Sold</strong>.Sold items cannot be booked.
   </p>
-
   <p>
     • Please wait for our confirmation first.
     If the product is available, we’ll reply <strong>“YES”</strong>.
   </p>
-
   <p>
     • To book, you can pay the <strong>booking amount or full amount</strong>.
 The booking amount is only to <strong>hold the product,</strong> so you can add more items and <strong>reduce delivery charges</strong>.
@@ -96,27 +82,21 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <p>
     • If the product is already sold, we’ll reply <strong>“SOLD”</strong>.
   </p>
-
   <p>
     <strong>Important:</strong> Please do <strong>not</strong> make any payment before confirmation.
   </p>
-
   <p>
     🚫 <strong>COD is not available</strong>
   </p>
-
   <p>
     🚚 <strong>Pan-India delivery</strong> with proper bubble-wrap packaging.
   </p>
-
   <p>
     📦 Delivery charges:
     ₹90 up to 500g · ₹120 per kg average, depends on location 
     <br><small>(Charges may vary slightly)</small>
   </p>
-
 </div>
-
   </div>
   <section id="products" class="products">
 <input
@@ -128,7 +108,6 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
 
 <div class="section">
   <div class="diorama-title">Lamborghini Miniature Display</div>
-
   <div class="slider">
     <img src="images/products/Image25.webp" onclick="openLightbox(this.src)">
     <img src="images/products/Image26.webp" onclick="openLightbox(this.src)">
@@ -136,56 +115,45 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
     <img src="images/products/Image28.webp" onclick="openLightbox(this.src)">
     <img src="images/products/Image29.webp" onclick="openLightbox(this.src)">
     <img src="images/products/Image30.webp" onclick="openLightbox(this.src)">
-    
   </div>
-
   <div class="price">
     <span class="old">₹1149</span>
     <span class="new">₹799</span>
   </div>
-
   <div class="discount">30.45% OFF · Save ₹350</div>
   <div class="ship">+ Shipping charges applicable</div>
-  
-  <button class="details-btn" data-label="Details" onclick="toggleDetails(this)">
+  <button class="details-btn" onclick="openDetailsSheet(this)">
   Details ▾
-</button>
+  </button>
  <div class="product-details">
   <p>
     This is a <strong>fully assembled, ready-to-display diorama</strong>,
     designed for collectors who value realism and craftsmanship.
   </p>
-
   <p>
     The diorama comes enclosed in a <strong>box-style display</strong> with
     <strong>built-in LED lighting</strong> and a
     <strong>clear acrylic front panel</strong> for enhanced presentation and protection.
   </p>
-
   <p>
     An <strong>external power adapter is included</strong>, ensuring quick and
     hassle-free setup.
   </p>
-
   <p><strong>Product Dimensions:</strong> 300 × 125 × 120 mm</p>
-
   <p>
     <strong>Note:</strong> Display models (cars) are
     <strong>not included</strong> and are shown for representation purposes only.
   </p>
 </div>
-
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Lamborghini%20Miniature%20Display%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
      target="_blank">
      Order on WhatsApp
   </a>
 </div>
-  
     
 <div class="section">
   <div class="diorama-title">Porsche Miniature Display</div>
-
   <div class="slider">
     <img src="images/products/Image16.webp" onclick="openLightbox(this.src)">
     <img src="images/products/Image17.webp" onclick="openLightbox(this.src)">
@@ -197,43 +165,35 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
     <img src="images/products/Image23.webp" onclick="openLightbox(this.src)">
     <img src="images/products/Image24.webp" onclick="openLightbox(this.src)">
   </div>
-
   <div class="price">
     <span class="old">₹1149</span>
     <span class="new">₹799</span>
   </div>
-
   <div class="discount">30.45% OFF · Save ₹350</div>
   <div class="ship">+ Shipping charges applicable</div>
-  
-  <button class="details-btn" data-label="Details" onclick="toggleDetails(this)">
+  <button class="details-btn" onclick="openDetailsSheet(this)">
   Details ▾
-</button>
+  </button>
  <div class="product-details">
   <p>
     This is a <strong>fully assembled, ready-to-display diorama</strong>,
     designed for collectors who value realism and craftsmanship.
   </p>
-
   <p>
     The diorama comes enclosed in a <strong>box-style display</strong> with
     <strong>built-in LED lighting</strong> and a
     <strong>clear acrylic front panel</strong> for enhanced presentation and protection.
   </p>
-
   <p>
     An <strong>external power adapter is included</strong>, ensuring quick and
     hassle-free setup.
   </p>
-
   <p><strong>Product Dimensions:</strong> 270 × 125 × 120 mm</p>
-
   <p>
     <strong>Note:</strong> Display models (cars) are
     <strong>not included</strong> and are shown for representation purposes only.
   </p>
 </div>
-
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Porsche%20Miniature%20Display%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
      target="_blank">
@@ -243,7 +203,6 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   
 <div class="section">
   <div class="diorama-title">Nissan Miniature Display</div>
-
   <div class="slider">
     <img src="images/products/Image8.webp" onclick="openLightbox(this.src)">
     <img src="images/products/Image9.webp" onclick="openLightbox(this.src)">
@@ -254,43 +213,35 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
     <img src="images/products/Image14.webp" onclick="openLightbox(this.src)">
     <img src="images/products/Image15.webp" onclick="openLightbox(this.src)">
   </div>
-
   <div class="price">
     <span class="old">₹1149</span>
     <span class="new">₹799</span>
   </div>
-
   <div class="discount">30.45% OFF · Save ₹350</div>
   <div class="ship">+ Shipping charges applicable</div>
-
-  <button class="details-btn" data-label="Details" onclick="toggleDetails(this)">
+  <button class="details-btn" onclick="openDetailsSheet(this)">
   Details ▾
-</button>
+  </button>
  <div class="product-details">
   <p>
     This is a <strong>fully assembled, ready-to-display diorama</strong>,
     designed for collectors who value realism and craftsmanship.
   </p>
-
   <p>
     The diorama comes enclosed in a <strong>box-style display</strong> with
     <strong>built-in LED lighting</strong> and a
     <strong>clear acrylic front panel</strong> for enhanced presentation and protection.
   </p>
-
   <p>
     An <strong>external power adapter is included</strong>, ensuring quick and
     hassle-free setup.
   </p>
-
   <p><strong>Product Dimensions:</strong> 270 × 125 × 120 mm</p>
-
   <p>
     <strong>Note:</strong> Display models (cars) are
     <strong>not included</strong> and are shown for representation purposes only.
   </p>
- </div>
-
+</div>
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20Nissan%20Miniature%20Display%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
      target="_blank">
@@ -298,10 +249,8 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   </a>
 </div>
 
-<!-- PRODUCT 2 -->
 <div class="section">
   <div class="diorama-title">BMW Miniature Display</div>
-
   <div class="slider">
     <img src="images/products/Image1.webp" onclick="openLightbox(this.src)">
     <img src="images/products/Image2.webp" onclick="openLightbox(this.src)">
@@ -311,52 +260,42 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
     <img src="images/products/image6.webp" onclick="openLightbox(this.src)">
     <img src="images/products/Image7.webp" onclick="openLightbox(this.src)">
   </div>
-
   <div class="price">
     <span class="old">₹1149</span>
     <span class="new">₹799</span>
   </div>
-
   <div class="discount">30.45% OFF · Save ₹350</div>
   <div class="ship">+ Shipping charges applicable</div>
-
-  <button class="details-btn" data-label="Details" onclick="toggleDetails(this)">
+  <button class="details-btn" onclick="openDetailsSheet(this)">
   Details ▾
-</button>
+  </button>
  <div class="product-details">
   <p>
     This is a <strong>fully assembled, ready-to-display diorama</strong>,
     designed for collectors who value realism and craftsmanship.
   </p>
-
   <p>
     The diorama comes enclosed in a <strong>box-style display</strong> with
     <strong>built-in LED lighting</strong> and a
     <strong>clear acrylic front panel</strong> for enhanced presentation and protection.
   </p>
-
   <p>
     An <strong>external power adapter is included</strong>, ensuring quick and
     hassle-free setup.
   </p>
-
   <p><strong>Product Dimensions:</strong> 270 × 125 × 120 mm</p>
-
   <p>
     <strong>Note:</strong> Display models (cars) are
     <strong>not included</strong> and are shown for representation purposes only.
   </p>
- </div>
-
+</div>
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%20Diecast.scape%2C%0AI%20would%20like%20to%20place%20an%20order%20for%20the%20BMW%20Miniature%20Display%2C%20priced%20at%20%E2%82%B9799%20(30.45%25%20discount).%0AKindly%20let%20me%20know%20the%20delivery%20options%20and%20payment%20details."
      target="_blank">
      Order on WhatsApp
   </a>
 </div>
-
 </section>
-
 <a class="wa-float"
 href="https://wa.me/918792744018?text=Hi%20I%20need%20help%20regarding%20Diecast.scape."
 target="_blank">
@@ -387,17 +326,27 @@ All brand names belong to their respective owners.<br><br>
 Thank you for visiting. 
   </div>
 </footer>
-
+<div id="lightbox" onclick="closeLightbox()">
+  <img id="lightbox-img">
+</div>
   <!-- Overlay -->
 <div class="menu-overlay" onclick="closeMenu()"></div>
-
+<!-- Bottom Sheet Overlay -->
+<div id="sheetOverlay" class="sheet-overlay" onclick="closeSheet()"></div>
+<!-- Bottom Sheet -->
+<div id="bottomSheet" class="bottom-sheet">
+  <div class="sheet-handle"></div>
+  <div class="sheet-content" id="sheetContent">
+    <!-- Content will be injected here -->
+  </div>
+  <button class="sheet-close" onclick="closeSheet()">Close</button>
+</div>
 <!-- Slide Menu -->
 <nav class="side-menu">
   <div class="menu-header">
     <span>Menu</span>
     <span class="close-btn" onclick="closeMenu()">✕</span>
   </div>
-
   <!-- Theme Toggle (UI only) -->
 <div class="theme-toggle">
   <span>Theme</span>
@@ -405,7 +354,6 @@ Thank you for visiting.
     <div class="toggle-circle"></div>
   </div>
 </div>
-  
   <a href="/special-sale/" class="menu-sale">Special Sale 🔥</a>
   <a href="/about/">About Us</a>
   <a href="/privacy/">Privacy Policy</a>
@@ -414,8 +362,6 @@ Thank you for visiting.
   <a href="/terms/">Terms of Service</a>
 </nav>
 
-  
-  
 <script src="/assets/ js/core.js"></script>
 <script src="/assets/ js/products.js"></script>
 <script src="/assets/ js/config.js"></script>
@@ -440,6 +386,5 @@ Thank you for visiting.
     timeText.innerHTML = `Live on ${formatted}`;
   }
 </script>
-
 </body>
 </html>
