--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -13,7 +13,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Special Sale | Diecast.scape</title>
-  
 <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -23,9 +22,7 @@
 <header class="site-header">
   <div class="header-inner">
     <img src="/logo.png" class="header-logo" alt="Diecast Scape Logo">
-
     <div class="header-title">DIECAST.SCAPE</div>
-
     <!-- Hamburger -->
     <div class="hamburger" onclick="openMenu()">☰</div>
   </div>
@@ -33,64 +30,34 @@
   <div class="page1">
   <h1><a href="/index.html">《 Back </a></h1>
   </div>
+  
   <!-- PAGE INTRO -->
 <div class="page">
   <h1>Special sale</h1>
-  <p>While you’re thinking, someone else might be booking it right now.<strong>book now</strong></p>
-  <button class="details-btn booking-btn" data-label="Booking Guide" onclick="toggleDetails(this)">
-  Booking Guide ▾
-</button>
+  <p>While you’re thinking, someone else might be booking it right now.
+
+  <button class="details-btn" onclick="openDetailsSheet(this)">
+  Booking Guide 
+    </button>
   <div class="product-details">
-  <p>
-    •Products are live during the <strong>sale time</strong>.
-   If all products are <strong>sold out</strong>, please wait for the <strong>next sale</strong>.
-    </p>
-  <p>
-    •Products may be available as <strong>single pieces or combo sets</strong>, depending on stock.
-  </p>
-  <p>
-    • To place an order, click the <strong>“Book Now”</strong> button to contact us on WhatsApp.
-  </p>
-  <p>
-    •Before you book, please make sure the product is not marked as <strong>Sold</strong>.Sold items cannot be booked.
-  </p>
-
-  <p>
-    • Please wait for our confirmation first.
-    If the product is available, we’ll reply <strong>“YES”</strong>.
-  </p>
-
-  <p>
-    • To book, you can pay the <strong>booking amount or full amount</strong>.
-The booking amount is only to <strong>hold the product,</strong> so you can add more items and <strong>reduce delivery charges</strong>.
-  </p>
-  <p>
-    • <strong>Please book your products early to avoid missing out</strong>.
-  </p>
-  <p>
-    • If the product is already sold, we’ll reply <strong>“SOLD”</strong>.
-  </p>
-
-  <p>
-    <strong>Important:</strong> Please do <strong>not</strong> make any payment before confirmation.
-  </p>
-
-  <p>
-    🚫 <strong>COD is not available</strong>
-  </p>
-
-  <p>
-    🚚 <strong>Pan-India delivery</strong> with proper bubble-wrap packaging.
-  </p>
-
-  <p>
-    📦 Delivery charges:
+  <p>•Products are live during the <strong>sale time</strong>.
+   If all products are <strong>sold out</strong>, please wait for the <strong>next sale</strong>.</p>
+  <p>•Products may be available as <strong>single pieces or combo sets</strong>, depending on stock.</p>
+  <p>•To place an order, click the <strong>“Book Now”</strong> button to contact us on WhatsApp.</p>
+  <p>•Before you book, please make sure the product is not marked as <strong>Sold</strong>.Sold items cannot be booked.</p>
+  <p>•Please wait for our confirmation first.
+    If the product is available, we’ll reply <strong>“YES”</strong>.</p>
+  <p>•To book, you can pay the <strong>booking amount or full amount</strong>.
+   The booking amount is only to <strong>hold the product,</strong> so you can add more items and <strong>reduce delivery charges</strong>.</p>
+  <p>•<strong>Please book your products early to avoid missing out</strong>.</p>
+  <p>•If the product is already sold, we’ll reply <strong>“SOLD”</strong>.</p>
+  <p><strong>Important:</strong> Please do <strong>not</strong> make any payment before confirmation.</p>
+  <p>🚫 <strong>COD is not available</strong></p>
+  <p>🚚 <strong>Pan-India delivery</strong> with proper bubble-wrap packaging.</p>
+  <p>📦 Delivery charges:
     ₹90 up to 500g · ₹120 per kg average, depends on location 
-    <br><small>(Charges may vary slightly)</small>
-  </p>
-
+    <br><small>(Charges may vary slightly)</small></p>
 </div>
-
 </div>
 <!-- SEARCH -->
 <input
@@ -111,9 +78,7 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="price">
     <span class="new">₹299</span>
   </div>
-
   <div class="ship">+ Shipping charges applicable</div>
-
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET01.%0AIs%20it%20available%3F"
      target="_blank">
@@ -130,9 +95,7 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="price">
     <span class="new">₹299</span>
   </div>
-
   <div class="ship">+ Shipping charges applicable</div>
-
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET02.%0AIs%20it%20available%3F"
      target="_blank">
@@ -149,9 +112,7 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="price">
     <span class="new">₹299</span>
   </div>
-
   <div class="ship">+ Shipping charges applicable</div>
-
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET03.%0AIs%20it%20available%3F"
      target="_blank">
@@ -168,16 +129,13 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="price">
     <span class="new">₹299</span>
   </div>
-
   <div class="ship">+ Shipping charges applicable</div>
-
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET04.%0AIs%20it%20available%3F"
      target="_blank">
      Book Now
   </a>
     </div>
-
     <div class="section sale-product">
   <div class="diorama-title">NISSAN SILVIA (S13) FAST AND FURIOUS</div>
   <div class="slider-wrap">
@@ -188,9 +146,7 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="price">
     <span class="new">₹299</span>
   </div>
-
   <div class="ship">+ Shipping charges applicable</div>
-
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET05.%0AIs%20it%20available%3F"
      target="_blank">
@@ -209,16 +165,13 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   <div class="price">
     <span class="new">₹179</span>
   </div>
-
   <div class="ship">+ Shipping charges applicable</div>
-
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET06.%0AIs%20it%20available%3F"
      target="_blank">
      Book Now
   </a>
 </div>
-
 <div class="section sale-product">
   <div class="diorama-title">Nissan</div>
   <div class="slider-wrap">
@@ -228,13 +181,10 @@ The booking amount is only to <strong>hold the product,</strong> so you can add 
   </div>
   <div class="sold-badge">SOLD</div>
   </div>
-
   <div class="price">
     <span class="new">₹179</span>
   </div>
-
   <div class="ship">+ Shipping charges applicable</div>
-
   <a class="buy-btn"
      href="https://wa.me/918792744018?text=Hi%2C%20I%20want%20to%20book%20%23SET07.%0AIs%20it%20available%3F"
     target="_blank">
@@ -253,7 +203,6 @@ target="_blank">
     <a href="https://instagram.com/diecast.scape" target="_blank">Instagram</a>
     <a href="https://wa.me/918792744018" target="_blank">WhatsApp</a>
   </div>
-
   <div class="footer-grid">
     <div>
       <h4>Know more</h4>
@@ -278,6 +227,18 @@ Thank you for visiting.
   <div id="lightbox" onclick="closeLightbox()">
   <img id="lightbox-img">
   </div>
+  <!-- Bottom Sheet Overlay -->
+<div id="sheetOverlay" class="sheet-overlay" onclick="closeSheet()"></div>
+
+<!-- Bottom Sheet -->
+<div id="bottomSheet" class="bottom-sheet">
+  <div class="sheet-handle"></div>
+  <div class="sheet-content" id="sheetContent">
+    <!-- Content will be injected here -->
+  </div>
+  <button class="sheet-close" onclick="closeSheet()">Close</button>
+</div>
+
 <!-- Slide Menu -->
 <nav class="side-menu">
   <div class="menu-header">
