--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -34,7 +34,7 @@
   <!-- PAGE INTRO -->
 <div class="page">
   <h1>Special sale</h1>
-  <p>While you’re thinking, someone else might be booking it right now.
+  <p>While you’re thinking, someone else might be booking it right now.</p>
 
   <button class="details-btn" onclick="openDetailsSheet(this)">
   Booking Guide 
