--- a/special-sale/index.html
+++ b/special-sale/index.html
@@ -71,7 +71,7 @@
   <div class="diorama-title">NISSAN SILVIA (S15) FAST AND FURIOUS</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot2.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot2.webp" loading="lazy" decoding="async" onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -88,7 +88,7 @@
   <div class="diorama-title">1970 MONTE CARLO FAST AND FURIOUS</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot3.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot3.webp" loading="lazy" decoding="async" onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -105,7 +105,7 @@
   <div class="diorama-title">1970 ROAD RUNNER FAST AND FURIOUS</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot4.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot4.webp" loading="lazy" decoding="async" onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -122,7 +122,7 @@
   <div class="diorama-title">NISSAN SILVIA (S13) FAST AND FURIOUS</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot5.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot5.webp" loading="lazy" decoding="async" onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -139,8 +139,8 @@
   <div class="diorama-title">Porsche</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
-    <img src="/images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot0.webp" loading="lazy" decoding="async" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot0.webp" loading="lazy" decoding="async" onclick="openLightbox(this.src)">
   </div>
  <div class="sold-badge">SOLD</div>
   </div>
@@ -158,8 +158,8 @@
   <div class="diorama-title">Nissan</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
-    <img src="/images/newsale/Hot0.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot0.webp" loading="lazy" decoding="async" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot0.webp" loading="lazy" decoding="async" onclick="openLightbox(this.src)">
   </div>
   <div class="sold-badge">SOLD</div>
   </div>
@@ -178,7 +178,7 @@
   <div class="diorama-title">NISSAN 350Z CUSTOM/PERSONNALISÉ AND FURIOUS</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot1.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot1.webp" loading="lazy" decoding="async" onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -195,7 +195,7 @@
   <div class="diorama-title">NISSAN SILVIA (S15) FAST AND FURIOUS</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot2.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot2.webp" loading="lazy" decoding="async" onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -212,7 +212,7 @@
   <div class="diorama-title">1970 MONTE CARLO FAST AND FURIOUS</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot3.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot3.webp" loading="lazy" decoding="async" onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
@@ -229,7 +229,7 @@
   <div class="diorama-title">1970 ROAD RUNNER FAST AND FURIOUS</div>
   <div class="slider-wrap">
   <div class="slider">
-    <img src="/images/newsale/Hot4.webp" onclick="openLightbox(this.src)">
+    <img src="/images/newsale/Hot4.webp" loading="lazy" decoding="async" onclick="openLightbox(this.src)">
   </div>
   </div>
   <div class="price">
