--- a/index.html
+++ b/index.html
@@ -63,32 +63,50 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     <div class="img-box">
     <div class="img-loader"></div>
     <img src="images/products-temp/Image25_1.webp" 
-     data-full="images/products/Image25.webp" onclick="openLightbox(this.dataset.full)">
+     data-full="images/products/Image25.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
     </div>
     <div class="img-box">
     <div class="img-loader"></div>
     <img src="images/products-temp/Image26_1.webp" 
-     data-full="images/products/Image26.webp" onclick="openLightbox(this.dataset.full)">
+     data-full="images/products/Image26.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
     </div>
     <div class="img-box">
     <div class="img-loader"></div>
     <img src="images/products-temp/Image27_1.webp" 
-     data-full="images/products/Image27.webp" onclick="openLightbox(this.dataset.full)">
+     data-full="images/products/Image27.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
     </div>
     <div class="img-box">
     <div class="img-loader"></div>
     <img src="images/products-temp/Image28_1.webp" 
-     data-full="images/products/Image28.webp" onclick="openLightbox(this.dataset.full)">
+     data-full="images/products/Image28.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
     </div>
     <div class="img-box">
     <div class="img-loader"></div>
     <img src="images/products-temp/Image29_1.webp" 
-     data-full="images/products/Image29.webp" onclick="openLightbox(this.dataset.full)">
+     data-full="images/products/Image29.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
     </div>
     <div class="img-box">
     <div class="img-loader"></div>
     <img src="images/products-temp/Image30_1.webp" 
-     data-full="images/products/Image30.webp" onclick="openLightbox(this.dataset.full)">
+     data-full="images/products/Image30.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
     </div>
   </div>
   <div class="price">
