--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     <div class="img-loader"></div>
     <img src="images/products-temp/Image25_1.webp" 
      data-full="images/products/Image25.webp" 
+      loading="lazy"
+      decoding="async"
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
       style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
@@ -72,6 +74,8 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     <div class="img-loader"></div>
     <img src="images/products-temp/Image26_1.webp" 
      data-full="images/products/Image26.webp" 
+      loading="lazy"
+      decoding="async"
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
       style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
@@ -80,14 +84,17 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     <div class="img-loader"></div>
     <img src="images/products-temp/Image27_1.webp" 
      data-full="images/products/Image27.webp" 
+      loading="lazy"
+      decoding="async"
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
-      style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
     </div>
     <div class="img-box">
     <div class="img-loader"></div>
     <img src="images/products-temp/Image28_1.webp" 
      data-full="images/products/Image28.webp" 
+      loading="lazy"
+      decoding="async"
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
       style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
@@ -96,6 +103,8 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     <div class="img-loader"></div>
     <img src="images/products-temp/Image29_1.webp" 
      data-full="images/products/Image29.webp" 
+      loading="lazy"
+      decoding="async"
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
       style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
@@ -104,6 +113,8 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     <div class="img-loader"></div>
     <img src="images/products-temp/Image30_1.webp" 
      data-full="images/products/Image30.webp" 
+      loading="lazy"
+      decoding="async"
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
       style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
