--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     <div class="img-loader"></div>
     <img src="images/products-temp/Image25_1.webp" 
      data-full="images/products/Image25.webp" 
-      loading="lazy"
-      decoding="async"
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
       style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
@@ -74,8 +72,6 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     <div class="img-loader"></div>
     <img src="images/products-temp/Image26_1.webp" 
      data-full="images/products/Image26.webp" 
-      loading="lazy"
-      decoding="async"
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
       style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
@@ -84,17 +80,14 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     <div class="img-loader"></div>
     <img src="images/products-temp/Image27_1.webp" 
      data-full="images/products/Image27.webp" 
-      loading="lazy"
-      decoding="async"
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
     </div>
     <div class="img-box">
     <div class="img-loader"></div>
     <img src="images/products-temp/Image28_1.webp" 
      data-full="images/products/Image28.webp" 
-      loading="lazy"
-      decoding="async"
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
       style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
@@ -103,8 +96,6 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     <div class="img-loader"></div>
     <img src="images/products-temp/Image29_1.webp" 
      data-full="images/products/Image29.webp" 
-      loading="lazy"
-      decoding="async"
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
       style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
@@ -113,8 +104,6 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     <div class="img-loader"></div>
     <img src="images/products-temp/Image30_1.webp" 
      data-full="images/products/Image30.webp" 
-      loading="lazy"
-      decoding="async"
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
       style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
@@ -159,15 +148,78 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
 <div class="section">
   <div class="diorama-title">Porsche Miniature Display</div>
   <div class="slider">
-    <img src="images/products/Image16.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image17.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image18.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image19.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image20.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image21.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image22.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image23.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image24.webp" onclick="openLightbox(this.src)">
+        <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image_16.webp" 
+     data-full="images/products/Image16.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image17_1.webp" 
+     data-full="images/products/Image17.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image18_1.webp" 
+     data-full="images/products/Image18.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image19_1.webp" 
+     data-full="images/products/Image19.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image20_1.webp" 
+     data-full="images/products/Image20.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image21_1.webp" 
+     data-full="images/products/Image21.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image22_1.webp" 
+     data-full="images/products/Image22.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+   <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image23_1.webp" 
+     data-full="images/products/Image23.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+   <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image24_1.webp" 
+     data-full="images/products/Image24.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
   </div>
   <div class="price">
     <span class="old">₹1149</span>
@@ -208,15 +260,71 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
 <div class="section">
   <div class="diorama-title">Nissan Miniature Display</div>
   <div class="slider">
-    <img src="images/products/Image8.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image9.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image10.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image11.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image12.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image13.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image14.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image15.webp" onclick="openLightbox(this.src)">
-  </div>
+        <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image8_1.webp" 
+     data-full="images/products/Image8.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image9_1.webp" 
+     data-full="images/products/Image9.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image10_1.webp" 
+     data-full="images/products/Image10.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image11_1.webp" 
+     data-full="images/products/Image11.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image12_1.webp" 
+     data-full="images/products/Image12.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image13_1.webp" 
+     data-full="images/products/Image13.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image14_1.webp" 
+     data-full="images/products/Image14.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image15_1.webp" 
+     data-full="images/products/Image15.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+      </div>
   <div class="price">
     <span class="old">₹1149</span>
     <span class="new">₹799</span>
@@ -256,13 +364,62 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
 <div class="section">
   <div class="diorama-title">BMW Miniature Display</div>
   <div class="slider">
-    <img src="images/products/Image1.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image2.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image3.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/image4.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image5.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/image6.webp" onclick="openLightbox(this.src)">
-    <img src="images/products/Image7.webp" onclick="openLightbox(this.src)">
+        <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image1_1.webp" 
+     data-full="images/products/Image1.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image2_1.webp" 
+     data-full="images/products/Image2.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image3_1.webp" 
+     data-full="images/products/Image3.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image4_1.webp" 
+     data-full="images/products/Image4.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image5_1.webp" 
+     data-full="images/products/Image5.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+    <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image6_1.webp" 
+     data-full="images/products/Image6.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
+       <div class="img-box">
+    <div class="img-loader"></div>
+    <img src="images/products-temp/Image7_1.webp" 
+     data-full="images/products/Image7.webp" 
+      onload="this.previousElementSibling.remove(); this.style.opacity=1"
+      style="opacity:0" 
+      onclick="openLightbox(this.dataset.full)">
+    </div>
   </div>
   <div class="price">
     <span class="old">₹1149</span>
