--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     </div>
     <div class="img-box">
     <div class="img-loader"></div>
-    <img src="images/products-temp/Image4_1.webp" 
-     data-full="images/products/Image4.webp" 
+    <img src="images/products-temp/image4_1.webp" 
+     data-full="images/products/image4.webp" 
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
       style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
@@ -406,8 +406,8 @@ Each piece is carefully built with attention to scale, detail, and finish—perf
     </div>
     <div class="img-box">
     <div class="img-loader"></div>
-    <img src="images/products-temp/Image6_1.webp" 
-     data-full="images/products/Image6.webp" 
+    <img src="images/products-temp/image6_1.webp" 
+     data-full="images/products/image6.webp" 
       onload="this.previousElementSibling.remove(); this.style.opacity=1"
       style="opacity:0" 
       onclick="openLightbox(this.dataset.full)">
